update web description of bk_server config

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -52,7 +52,7 @@ bookiePort=3181
 # Directory Bookkeeper outputs its write ahead log
 journalDirectory=/tmp/bk-txn
 
-# The dir names to store journal files
+# Directories Bookkeeper outputs its write ahead log
 # journalDirectories=/tmp/bk-txn
 
 # Directory Bookkeeper outputs ledger snapshots
@@ -109,7 +109,7 @@ ledgerDirectories=/tmp/bk-data
 # minorCompactionInterval=3600
 
 # Interval between sending an explicit LAC in seconds
-explicitLacInterval = 1
+explicitLacInterval=1
 
 # Threshold of major compaction
 # For those entry log files whose remaining size percentage reaches below
@@ -243,13 +243,12 @@ zkEnableSecurity=false
 # a single IP packet, setting server.tcpnodelay to false to enable Nagle algorithm
 # can provide better performance.
 # Default value is true.
-#
 # serverTcpNoDelay=true
 
 # This setting is used to send keep-alive messages on connection-oriented sockets.
 # serverSockKeepalive=true
 
-# Set socket linger timeout on close.
+# The socket linger timeout on close.
 # When enabled, a close or shutdown will not return until all queued messages for
 # the socket have been successfully sent or the linger timeout has been reached.
 # Otherwise, the call returns immediately and the closing is done in the background.
@@ -360,10 +359,10 @@ zkEnableSecurity=false
 
 ## Long poll parameters
 
-# The number of threads that should handle long poll requests
+# The number of threads that should handle long poll requests.
 # numLongPollWorkerThreads=10
 
-# The tick duration in milliseconds for long poll requests
+# The tick duration in milliseconds for long poll requests.
 # requestTimerTickDurationMs=10
 
 # The number of ticks per wheel for the long poll request timer.
@@ -381,26 +380,26 @@ zkEnableSecurity=false
 # Defaults to false.
 # useHostNameAsBookieID=false
 
-# The bookie to listen for BookKeeper clients executed on the local JVM
+# Whether conf the bookie to listen for BookKeeper clients executed on the local JVM.
 # enableLocalTransport=false
 
 # Whether conf the bookie to disable bind on network interfaces,
-# this bookie will be available only to BookKeeper clients executed on the local JVM
+# this bookie will be available only to BookKeeper clients executed on the local JVM.
 # disableServerSocketBind=false
 
 # Whether sorted-ledger storage enabled (default true)
 # sortedLedgerStorageEnabled=ture
 
-# The skip list data size limitation (default 64MB)
-# skipListSizeLimit=64 * 1024 * 1024L
+# The skip list data size limitation (default 64MB) in EntryMemTable
+# skipListSizeLimit=67108864L
 
 # The number of bytes we should use as chunk allocation for
 # org.apache.bookkeeper.bookie.SkipListArena
-# skipListArenaChunkSize=4096*1024
+# skipListArenaChunkSize=4194304
 
 # The max size we should allocate from the skiplist arena. Allocations
 # larger than this should be allocated directly by the VM to avoid fragmentation.
-# skipListArenaMaxAllocSize=128 * 1024
+# skipListArenaMaxAllocSize=131072
 
 # Auto-replication
 # The grace period, in seconds, that the replication worker waits before fencing and
@@ -413,32 +412,34 @@ zkEnableSecurity=false
 # Stats Provider Class (if statistics are enabled)
 #statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
 
-# SSL Provider (JDK or OpenSSL)
+## SSL configure
+
+# SSL Provider (JDK or OpenSSL).
 # sslProvider=OpenSSL
 
 # The path to class that provides security.
-#sslProviderFactoryClass=org.apache.bookkeeper.security.SSLContextFactory
+# sslProviderFactoryClass=org.apache.bookkeeper.security.SSLContextFactory
 
-# Type of security used by server
-#sslClientAuthentication=true
+# Type of security used by server.
+# sslClientAuthentication=true
 
-# Bookie Keystore type
-#sslKeyStoreType=JKS
+# Bookie Keystore type.
+# sslKeyStoreType=JKS
 
-# Bookie Keystore location (path)
-#sslKeyStore=
+# Bookie Keystore location (path).
+# sslKeyStore=null
 
-# Bookie Keystore password path, if the keystore is protected by a password
-#sslKeyStorePasswordPath=
+# Bookie Keystore password path, if the keystore is protected by a password.
+# sslKeyStorePasswordPath=null
 
-# Bookie Truststore type
-#sslTrustStoreType=
+# Bookie Truststore type.
+# sslTrustStoreType=null
 
-# Bookie Truststore location (path)
-#sslTrustStore=
+# Bookie Truststore location (path).
+# sslTrustStore=null
 
-# Bookie Truststore password path, if the truststore is protected by a password
-#sslTrustStorePasswordPath=
+# Bookie Truststore password path, if the truststore is protected by a password.
+# sslTrustStorePasswordPath=null
 
 # Minimum safe Usable size to be available in index directory for Bookie to create Index File while replaying 
 # journal at the time of Bookie Start in Readonly Mode (in bytes)
@@ -449,22 +450,22 @@ zkEnableSecurity=false
 
 ## Rx adaptive ByteBuf allocator parameters
 
-# The Recv ByteBuf allocator initial buf size
-# byteBufAllocatorSizeInitial=64 * 1024
+# The Recv ByteBuf allocator initial buf size.
+# byteBufAllocatorSizeInitial=65536
 
-# The Recv ByteBuf allocator min buf size
-# byteBufAllocatorSizeMin=64 * 1024
+# The Recv ByteBuf allocator min buf size.
+# byteBufAllocatorSizeMin=65536
 
-# The Recv ByteBuf allocator max buf size
-# byteBufAllocatorSizeMax=1 * 1024 * 1024
+# The Recv ByteBuf allocator max buf size.
+# byteBufAllocatorSizeMax=1048576
 
 # The bookie authentication provider factory class name.
-# If this returns null, no authentication will take place.
+# If this is null, no authentication will take place.
 # bookieAuthProviderFactoryClass=null
 
 # The minimum safe Usable size to be available in index directory for Bookie to create Index File while replaying
 # journal at the time of Bookie Start in Readonly Mode (in bytes)
-# minUsableSizeForIndexFileCreation=100 * 1024 * 1024L
+# minUsableSizeForIndexFileCreation=104857600L
 
 # Whether it is allowed to have multiple ledger/index/journal
 # Directories in the same filesystem disk partition
