--- a/site/_data/config/bk_server.yaml
+++ b/site/_data/config/bk_server.yaml
@@ -7,9 +7,18 @@ groups:
   - param: journalDirectory
     description: The directory to which Bookkeeper outputs its write-ahead log (WAL).
     default: /tmp/bk-txn
+  - param: allowMultipleDirsUnderSameDiskPartition
+    description: Configure the Bookie to allow/disallow multiple ledger/index/journal directories in the same filesystem diskpartition
+    default: false
+  - param: journalDirectories
+    description: The directories to which Bookkeeper outputs its write-ahead log (WAL).
+    default: /tmp/bk-txn
   - param: indexDirectories
     description: The directories in which index files are stored. If not specified, the value of [`ledgerDirectories`](#ledgerDirectories) will be used.
     default: /tmp/bk-data
+  - param: minUsableSizeForIndexFileCreation
+    description: Minimum safe Usable size to be available in index directory for Bookie to create Index File while replaying journal at the time of Bookie Start in Readonly Mode (in bytes)
+    default: 1073741824
   - param: listeningInterface
     description: The network interface that the bookie should listen on. If not set, the bookie will listen on all interfaces.
     default: eth0
@@ -38,6 +47,26 @@ groups:
   - param: lostBookieRecoveryDelay
     description: How long to wait, in seconds, before starting autorecovery of a lost bookie.
     default: 0
+  - param: allowEphemeralPorts
+    description: Whether the bookie allowed to use an ephemeral port (port 0) as its server port. By default, an ephemeral port is not allowed. Using an ephemeral port as the service port usually indicates a configuration error. However, in unit tests, using ephemeral port will address port conflicts problem and allow running tests in parallel.
+    default: 'false'
+  - param: enableLocalTransport
+    description: Whether conf the bookie to listen for BookKeeper clients executed on the local JVM.
+    default: 'false'
+  - param: disableServerSocketBind
+    description: Whether conf the bookie to disable bind on network interfaces, this bookie will be available only to BookKeeper clients executed on the local JVM.
+    default: 'false'
+  - param: skipListArenaChunkSize
+    description: The number of bytes we should use as chunk allocation for org.apache.bookkeeper.bookie.SkipListArena
+    default: 4194304
+  - param: skipListArenaMaxAllocSize
+    description: The max size we should allocate from the skiplist arena. Allocations larger than this should be allocated directly by the VM to avoid fragmentation.
+    default: 131072
+  - param: bookieAuthProviderFactoryClass
+    description: The bookie authentication provider factory class name. If this is null, no authentication will take place.
+    default: null
+
+    bookieAuthProviderFactoryClass
 
 - name: Garbage collection settings
   params:
@@ -53,6 +82,56 @@ groups:
   - param: numReadWorkerThreads
     description: The umber of threads that handle read requests. If 0, reads are handled by [Netty threads](http://netty.io/wiki/thread-model.html) directly.
     default: 1
+  - param: isForceGCAllowWhenNoSpace
+    description: Whether force compaction is allowed when disk full or almost full Force GC may get some space back, but may also fill up disk space more quickly. This is because new log files are created before GC, while old garbage log files deleted after GC.
+    default: 'false'
+
+- name: SSL settings
+  params:
+  - param: sslProvider
+    description: SSL Provider (JDK or OpenSSL)
+    default: OpenSSL
+  - param: sslProviderFactoryClass
+    description: The path to class that provides security.
+    default: org.apache.bookkeeper.security.SSLContextFactory
+  - param: sslClientAuthentication
+    description: Type of security used by server.
+    default: 'true'
+  - param: sslKeyStoreType
+    description: Bookie Keystore type.
+    default: JKS
+  - param: sslKeyStore
+    description: Bookie Keystore location (path).
+    default: null
+  - param: sslKeyStore
+    description: Bookie Keystore location (path).
+    default: null
+  - param: sslKeyStorePasswordPath
+    description: Bookie Keystore password path, if the keystore is protected by a password.
+    default: null
+  - param: sslTrustStoreType
+    description: Bookie Truststore type.
+    default: null
+  - param: sslTrustStore
+    description: Bookie Truststore location (path).
+    default: null
+  - param: sslTrustStorePasswordPath
+    description: Bookie Truststore password path, if the truststore is protected by a password.
+    default: null
+
+
+- name: Long poll request parameters settings
+  params:
+  - param: numLongPollWorkerThreads
+    description: The number of threads that should handle long poll requests.
+    default: 10
+  - param: requestTimerTickDurationMs
+    description: The tick duration in milliseconds for long poll requests.
+    default: 10
+  - param: requestTimerNumTicks
+    description: The number of ticks per wheel for the long poll request timer.
+    default: 1024
+
 
 - name: AutoRecovery settings
   params:
@@ -65,6 +144,9 @@ groups:
   - param: openLedgerRereplicationGracePeriod
     description: The grace period, in seconds, that the replication worker waits before fencing and replicating a ledger fragment that's still being written to upon bookie failure.
     default: 30
+  - param: autoRecoveryDaemonEnabled
+    description: Whether the Bookie itself can start auto-recovery service also or not.
+    default: false
 
 - name: Netty server settings
   params:
@@ -74,9 +156,24 @@ groups:
 
       If you are sending many small messages, such that more than one can fit in a single IP packet, setting server.tcpnodelay to false to enable Nagle algorithm can provide better performance.
     default: 'true'
+  - param: serverTcpLinger
+    description: The socket linger timeout on close. When enabled, a close or shutdown will not return until all queued messages for the socket have been successfully sent or the linger timeout has been reached. Otherwise, the call returns immediately and the closing is done in the background.
+    default: 0
+  - param: byteBufAllocatorSizeInitial
+    description: The Recv ByteBuf allocator initial buf size.
+    default: 65536
+  - param: byteBufAllocatorSizeMin
+    description: The Recv ByteBuf allocator min buf size.
+    default: 65536
+  - param: byteBufAllocatorSizeMax
+    description: The Recv ByteBuf allocator max buf size.
+    default: 1048576
 
 - name: Journal settings
   params:
+  - param: journalFormatVersionToWrite
+    description: The journal format version to write.
+    default: 4
   - param: journalMaxSizeMB
     description: Max file size of journal file, in mega bytes. A new journal file will be created when the old one reaches the file size limitation.
     default: 2048
@@ -107,6 +204,15 @@ groups:
   - param: numJournalCallbackThreads
     description: The number of threads that should handle journal callbacks.
     default: 1
+  - param: journalAlignmentSize
+    description: All the journal writes and commits should be aligned to given size. If not, zeros will be padded to align to given size.
+    default: 512
+  - param: journalBufferedEntriesThreshold
+    description: Maximum entries to buffer to impose on a journal write to achieve grouping.
+    default: 0
+  - param: journalFlushWhenQueueEmpty
+    description: If we should flush the journal when journal queue is empty.
+    default: 'false'
 
 - name: Ledger storage settings
   params:
@@ -122,6 +228,12 @@ groups:
 
       Set this to 0 to disable the periodic check completely. Note that periodic checking will put extra load on the cluster, so it should not be run more frequently than once a day.
     default: 604800
+  - param: sortedLedgerStorageEnabled
+    description: Whether sorted-ledger storage enabled (default true)
+    default: 'true'
+  - param: skipListSizeLimit
+    description: The skip list data size limitation (default 64MB) in EntryMemTable
+    default: 67108864L
 
 - name: Ledger cache settings
   params:
@@ -209,6 +321,10 @@ groups:
   - param: readOnlyModeEnabled
     description: If all ledger directories configured are full, then support only read requests for clients. If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted to read-only mode and serve only read requests. Otherwise the bookie will be shutdown. By default this will be disabled.
     default: 'false'
+  - param: forceReadOnlyBookie
+    description: Whether the Bookie is force started in read only mode or not.
+    default: 'false'
+
 
 - name: Disk utilization
   params:
@@ -220,6 +336,9 @@ groups:
     description: |
       Set the disk free space low water mark threshold. Disk is considered full when usage threshold is exceeded. Disk returns back to non-full state when usage is  below low water mark threshold. This prevents it from going back and forth between these states frequently when concurrent writes and compaction are happening. This also prevent bookie from switching frequently between read-only and read-writes states in the same cases.
     default: 0.90
+  - param: diskUsageWarnThreshold
+    description: The disk free space low water mark threshold. Disk is considered full when usage threshold is exceeded. Disk returns back to non-full state when usage is below low water mark threshold. This prevents it from going back and forth between these states frequently when concurrent writes and compaction are happening. This also prevent bookie from switching frequently between read-only and read-writes states in the same cases.
+    default: 0.95
   - param: diskCheckInterval
     description: Disk check interval in milliseconds. Interval to check the ledger dirs usage.
     default: 10000
@@ -233,3 +352,12 @@ groups:
   - param: zkTimeout
     description: ZooKeeper client session timeout in milliseconds. Bookie server will exit if it received SESSION_EXPIRED because it was partitioned off from ZooKeeper for more than the session timeout  JVM garbage collection, disk I/O will cause SESSION_EXPIRED. Increment this value could help avoiding this issue.
     default: 10
+  - param: zkRetryBackoffStartMs
+    description: The zookeeper client backoff retry start time in millis.
+    default: 1000
+  - param: zkRetryBackoffMaxMs
+    description: The zookeeper client backoff retry max time in millis.
+    default: 10000
+  - param: zkEnableSecurity
+    description: Set ACLs on every node written on ZooKeeper, this way only allowed users will be able to read and write BookKeeper metadata stored on ZooKeeper. In order to make ACLs work you need to setup ZooKeeper JAAS authentication all the Bookies and Client need to share the same user, and this is usually done using Kerberos authentication. See ZooKeeper documentation
+    default: 'false'
