Issue #372: Allow to configure advertised address in bookies

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -56,6 +56,10 @@ journalDirectory=/tmp/bk-txn
 # If not set, the bookie will listen on all interfaces.
 # listeningInterface=eth0
 
+# Configure a specific hostname or IP address that the bookie
+# should use to advertise itself to clients
+# advertisedAddress=
+
 # Whether the bookie allowed to use a loopback interface as its primary
 # interface(i.e. the interface it uses to establish its identity)?
 # By default, loopback interfaces are not allowed as the primary
