--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -56,8 +56,9 @@ journalDirectory=/tmp/bk-txn
 # If not set, the bookie will listen on all interfaces.
 # listeningInterface=eth0
 
-# Configure a specific hostname or IP address that the bookie
-# should use to advertise itself to clients
+# Configure a specific hostname or IP address that the bookie should use to advertise itself to
+# clients. If not set, bookie will advertised its own IP address or hostname, depending on the
+# listeningInterface and `seHostNameAsBookieID settings.
 # advertisedAddress=
 
 # Whether the bookie allowed to use a loopback interface as its primary
