--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,11 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-          <compilerArguments>
+          <compilerArgs>
             <compilerArg>Werror</compilerArg>
             <compilerArg>Xlint:deprecation</compilerArg>
             <compilerArg>Xlint:unchecked</compilerArg>
-	  </compilerArguments>
+	  </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
