--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,7 @@
             <exclude>**/.settings/*</exclude>
             <exclude>site/**</exclude>
           </excludes>
+          <consoleOutput>true</consoleOutput>
         </configuration>
       </plugin>
     </plugins>
