--- a/site/_config.yml
+++ b/site/_config.yml
@@ -3,7 +3,6 @@ subtitle: A scalable, fault tolerant and low latency storage serivce optimized f
 github_repo: https://github.com/apache/bookkeeper
 github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
-bk_version: "4.5.0"
 baseurl: /
 destination: local-generated
 twitter_url: https://twitter.com/asfbookkeeper
@@ -11,6 +10,7 @@ twitter_url: https://twitter.com/asfbookkeeper
 livereload: true
 
 versions:
+# [next_version_placehodler]
 
 archived_versions:
 - "4.4.0"
