--- a/site/_config.yml
+++ b/site/_config.yml
@@ -25,6 +25,7 @@ archived_versions:
 - "4.1.0"
 - "4.0.0"
 latest_version: "4.5.0-SNAPSHOT"
+latest_release: "4.4.0"
 stable_release: "4.4.0"
 distributedlog_version: "2.1.0-0.4.0"
 
