--- a/compat-deps/pom.xml
+++ b/compat-deps/pom.xml
@@ -19,11 +19,11 @@
   <parent>
     <artifactId>bookkeeper</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.5.0-SNAPSHOT</version>
+    <version>4.5.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.bookkeeper</groupId>
-  <version>4.5.0-SNAPSHOT</version>
+  <version>4.5.0</version>
   <artifactId>compat-deps</artifactId>
   <packaging>pom</packaging>
   <name>Apache BookKeeper :: Compability Dependencies</name>
