ISSUE #405: Docker image: fix non-privileged user execution
- Fix non-privileged user execution
- Change the Makefile in order to always use current user when run the
  bk image
- Fix Makefile in order to run "make run-demo"
- Adjust unneeded packages remove in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,7 +31,7 @@ ENV BK_USER=bookkeeper
 # Download Apache Bookkeeper, untar and clean up
 RUN set -x \
     && adduser "${BK_USER}" \
-    && yum install -y java-1.8.0-openjdk-headless wget bash python md5sum sha1sum \
+    && yum install -y java-1.8.0-openjdk-headless wget bash python md5sum sha1sum sudo \
     && mkdir -pv /opt \
     && cd /opt \
     && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz" \
@@ -45,7 +45,7 @@ RUN set -x \
     && tar -xzf "$DISTRO_NAME.tar.gz" \
     && mv bookkeeper-server-${BK_VERSION}/ /opt/bookkeeper/ \
     && rm -rf "$DISTRO_NAME.tar.gz" "$DISTRO_NAME.tar.gz.asc" "$DISTRO_NAME.tar.gz.md5" "$DISTRO_NAME.tar.gz.sha1" \
-    && yum remove -y wget \
+    && yum remove -y wget md5sum sha1sum \
     && yum clean all
 
 WORKDIR /opt/bookkeeper
