--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,9 +1,8 @@
 title: Apache BookKeeper
-subtitle: A replicated log service
+subtitle: A scalable, fault-tolerant, and low-latency storage serivce optimized for real-time workloads
 github_repo: https://github.com/apache/bookkeeper
 github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
-bk_version: "4.5.0"
 baseurl: /
 destination: local-generated
 twitter_url: https://twitter.com/asfbookkeeper
@@ -11,7 +10,8 @@ twitter_url: https://twitter.com/asfbookkeeper
 livereload: true
 
 versions:
-- "4.5.0"
+# [next_version_placehodler]
+
 archived_versions:
 - "4.4.0"
 - "4.3.2"
@@ -24,7 +24,7 @@ archived_versions:
 - "4.2.0"
 - "4.1.0"
 - "4.0.0"
-latest: "4.5.0"
+latest_version: "4.5.0-SNAPSHOT"
 latest_release: "4.4.0"
 stable_release: "4.4.0"
 distributedlog_version: "2.1.0-0.4.0"
