--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -45,6 +45,17 @@ groups:
     endpoint: ledger-adv-api
   - name: DistributedLog
     endpoint: distributedlog-api
+- name: Security
+  dir: security
+  docs:
+  - name: Overview
+    endpoint: overview
+  - name: TLS Authentication
+    endpoint: tls
+  - name: SASL Authentication
+    endpoint: sasl
+  - name: ZooKeeper Authentication
+    endpoint: zookeeper
 - name: Development
   dir: development
   docs:
@@ -52,17 +63,6 @@ groups:
     endpoint: protocol
   #- name: Codebase
   #  endpoint: codebase
-- name: Security
-  dir: security
-  docs:
-  - name: Overview
-    endpoint: index
-  - name: TLS Authentication
-    endpoint: tls
-  - name: SASL Authentication
-    endpoint: sasl
-  - name: ZooKeeper Authentication
-    endpoint: zookeeper
 - name: Reference
   dir: reference
   docs:
